bk_ida/gccida/c2/unsigned_type
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1915:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 5) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1915:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 5) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1917:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 4) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1917:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 4) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1919:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 3) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1919:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 3) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1921:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 2) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1921:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 2) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1923:35: error: expected expression
if ( section_name == ( tree_node *)*( &global_trees + 1) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/c-common.c:1923:24: error: use of undeclared identifier 'tree_node'
if ( section_name == ( tree_node *)*( &global_trees + 1) ) 
                       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/unsigned_type/src/obj/c-common.o] Error 1
